src/styles.css
@import url(
  "https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
);

:root {
  --clr-fg: #000000;

  --clr-primary-0: #33a5e4;
  --clr-primary-10: #3191c8;
  --clr-primary-20: #2f7eac;
  --clr-primary-30: #2c6b92;
  --clr-primary-40: #285978;
  --clr-primary-50: #23475f;

  --clr-surface-0: #eef6fc;
  --clr-surface-10: #e1e8ed;
  --clr-surface-20: #d5dbdf;
  --clr-surface-30: #c8cdd1;
  --clr-surface-40: #bcc0c3;
  --clr-surface-50: #afb3b5;

  --font-size-xs: 0.694rem;
  --font-size-sm: 0.833rem;
  --font-size-md: 1rem;
  --font-size-lg: 1.2rem;
  --font-size-xl: 1.44rem;
  --font-size-2xl: 1.728rem;
  --font-size-3xl: 2.074rem;
  --font-size-4xl: 2.488rem;

  --icon-sm: 0.75rem;
  --icon-md: 1.5rem;
  --icon-lg: 2rem;

  --space-xxs: 0.125rem;
  --space-xs: 0.25rem;
  --space-sm: 0.5rem;
  --space-md: 1rem;

  --border-radius-sm: 0.5rem;
}

[data-theme="dark"] {
  --clr-fg: #ffffff;

  --clr-primary-10: #57afe7;
  --clr-primary-20: #72b8ea;
  --clr-primary-30: #89c2ed;
  --clr-primary-40: #9fccf0;
  --clr-primary-50: #b3d6f3;
  
  --clr-surface-0: #191f24;
  --clr-surface-10: #2e3438;
  --clr-surface-20: #454a4e;
  --clr-surface-30: #5d6165;
  --clr-surface-40: #76797d;
  --clr-surface-50: #8f9395;
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.icon-lg {
  width: var(--icon-lg);
  flex-shrink: 0;
}

.icon-md {
  width: var(--icon-md);
  flex-shrink: 0;
}

.icon-sm {
  width: var(--icon-sm);
  flex-shrink: 0;
}

.text-md {
  font-size: var(--font-size-md);
}

.text-lg {
  font-size: var(--font-size-lg);
}

.text-bold {
  font-weight: bold;
}

.fill-fg {
  fill: var(--clr-fg);
  transition: fill 0.4s ease;
}

.text-fg {
  color: var(--clr-fg);
  transition: color 0.4s ease;
}

.hidden {
  display: none !important;
}

.rotate {
  transform: rotate(-90deg);
}

.clickable-surface {
  border-radius: var(--border-radius-sm);
  transition: background-color 0.2s ease;
}

.clickable-surface:hover {
  background-color: var(--clr-surface-20);
}

body {
  font-family: "Inter", serif;
  background-color: var(--clr-surface-0);
  transition: background-color 0.4s ease;
}

button {
  border: none;
  background-color: transparent;
  cursor: pointer;
}

button svg {
  display: block;
}

a {
  text-decoration: none;
}

.sidebar {
  display: flex;
  flex-direction: column;
  height: 100vh;
  width: clamp(220px, 20vw, 320px);
  padding: var(--space-sm);
  background-color: var(--clr-surface-10);
  transition: background-color 0.4s ease;
}

.sidebar:hover .sidebar__toggle-projects-btn {
  display: inline;
}

.sidebar__header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: var(--space-sm)
}

.sidebar__title {
  font-size: var(--font-size-4xl);
  color: var(--clr-primary-0);
}

.sidebar__toggle-btn {
  padding: var(--space-xs) var(--space-xxs);
}

.sidebar__row {
  display: flex;
  align-items: center;
  gap: var(--space-sm);
  padding: var(--space-sm);
  width: 100%;
}

.sidebar__row--projects {
  padding: 0;
}

.sidebar__row--projects:hover .sidebar__add-project-btn {
  display: inline;
}

.sidebar__separator {
  margin: var(--space-sm);
  border-bottom: 1px solid var(--clr-surface-30);
  transition: border-color 0.4s ease;
}

.sidebar__project-navigation {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  flex: 1;
}

.sidebar__projects-link {
  flex: 1;
  text-align: left;
  padding: var(--space-sm);
}

.sidebar__project-controls {
  display: flex;
  align-items: center;
}

.sidebar__project-controls button {
  display: none;
  padding: var(--space-xxs);
}

.sidebar__project-controls button:hover {
  background-color: var(--clr-surface-30);
}

.sidebar__toggle-projects-btn svg {
  transition: transform 0.2s ease, fill 0.4s ease;
}

.sidebar__project-list-scroll-wrapper {
  overflow-y: auto;
  scrollbar-width: thin;
}

.sidebar__project-list {
  transition: height 0.2s ease;
}

.sidebar__project-name {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.project-editor {
  position: relative;
}

.project-editor__form {
  display: flex;
  gap: var(--space-xs);
}

.project-editor__edit-color-btn {
  display: flex;
  gap: var(--space-xs);
  padding: var(--space-sm);
}

.project-editor__name-input {
  font-size: inherit;
  width: 100%;
  padding: var(--space-xs) var(--space-sm);
  outline: none;
  border: 1px solid var(--clr-surface-30);
  border-radius: var(--border-radius-sm);
}

.project-editor__name-input:focus {
  border: 1px solid var(--clr-surface-50);
}

.project-editor__color-popover {
  position: absolute;
  top: 100%;
  left: 10%;
  display: grid;
  grid-template-columns: repeat(5, auto);
  gap: var(--space-sm);
  width: fit-content;
  padding: var(--space-sm);
  border-radius: var(--border-radius-sm);
  background-color: var(--clr-surface-40);
}

.project-editor__color-popover.above {
  top: auto;
  bottom: 100%;
}

.project-editor__color-swatch-btn {
  width: var(--icon-md);
  height: var(--icon-md);
  border: 1px solid var(--clr-fg);
  border-radius: 50%;
  background: var(--color);
}

.sidebar__theme-toggle-btn {
  width: fit-content;
  padding: var(--space-xs);
}

